Added better preference parsing and warnings for QM threads